# agent-based-prototyping

./: .gitignore  LICENSE  README.md  gui_benchmark.py  pyproject.toml  test_run_example.py  test_suite.py
benchmarking/: README.md  __init__.py  benchmark_runner.py  error_metrics.py  golden_solutions.py  scenarios.py  test_suite.py  visualization.py
diffusion_schemas/: __init__.py  base.py
diffusion_schemas/methods/: ADI.py  __init__.py  crank_nicolson.py  crank_nicolson_ADI.py  crank_nicolson_LOD.py  explicit_euler.py  implicit.py  implicit_ADI.py  implicit_LOD.py
diffusion_schemas/methods_BC/: ADI.py  __init__.py  crank_nicolson.py  crank_nicolson_ADI.py  crank_nicolson_LOD.py  explicit_euler.py  implicit.py  implicit_ADI.py  implicit_LOD.py
diffusion_schemas/methods_BC_I/: ADI.py  __init__.py  crank_nicolson.py  crank_nicolson_LOD.py  implicit.py  implicit_LOD.py
diffusion_schemas/methods_BC_OS/: __init__.py  implicit.py
diffusion_schemas/utils/: __init__.py  agents.py  boundary.py  bulk.py  initial_conditions.py
examples/: example_1d_diffusion.py  example_1d_diffusion_ADI.py  example_1d_diffusion_CN_ADI.py  example_2d_agents.py  example_2d_diffusion.py  example_3d_sphere.py  example_ADI_comparison_1D.py  example_ADI_comparison_2D.py  example_ADI_comparison_3D.py  example_CNvsI_comparison_2D.py  example_benchmark.py  example_method_comparison.py  example_method_comparison_1D.py  example_method_comparison_2D.py  example_method_comparison_2D_orders.py  scenario_benchmarking.py
tests/: __init__.py  test_agents.py  test_base.py  test_boundary_conditions.py  test_integration.py  test_methods.py
